# e-ks

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  build.rs  build.sh  check.sh  codecov.yaml  compose.yml  deny.toml  docker-compose.yml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build-lint-test.yml  check_newline.sh  codecov.yml  deploy-test.yaml  erase-test-env.yml  newline.yml  rustdoc.yml  sigrid-pr-feedback.yml  sigrid-publish.yml  sonarqube.yaml.yml
.sqlx/: query-01e0d051bbe8b31211db32707fbb38ce69394d757f4994c25194a7ce975a0201.json  query-0cfe0e2121e5d3942589ea61fa7c4a52150e8bcb44f2fdf01083c57d9376be0e.json  query-0eaad8fe4a278ad8cab6dd4c2e9b4e6236a7019100a7c9a2218e060cc99c2140.json  query-10a8ce61b09098ea34f354fd36465d5d4a679345583018f79148435c3a9f2515.json  query-24335b846ed5bf4f488a34be40be40e719fbd38d595d09cab9a1589ff4345db1.json  query-25b5e110a93f7483164aaccf0a90f42bd5374229ac995c42d7fa1e72a64db533.json  query-2f656127f18c29e030d163b586206ad4e2838a42e1fd671e1865e86169adc11c.json  query-2fc5feca2588c60954007dc26c778edb7542f41c64067c4884c31d7de4356de8.json  query-4f690c8bcbe9b2694fa618906fd8e0cc6bccc71333a2dbc1f188b6af7dc43977.json  query-51d23dfafaa88992eb1dc9d30636debcae478e7169660209c78249a16b7bb4fa.json  query-5cde48b181e7319d124734c0ec1222e7477d2cda8e3ba4aea9ea8c898369f416.json  query-5dc3136542d7bb0a45d2d2ac6e83becc798dc3062842a597c375396f967783c2.json  query-6367271163411e0cdda98c142e145a21ea0973ed051efd8e2a3ee68c900faf8e.json  query-754a7ddf307f0bcf5b0135e22b36e465175fe8bca93317b4ef4d3d0b3c37fdfb.json  query-78353afe9f4b60d0ec09b75e4c6b84582c3355875d892a08e8ae2b9e2f650c0f.json  query-82482cebbfb1047222dba457d02090821b6da469f8123a8b954968f096e42d3f.json  query-82d13129c5ebbce9bbd6fa6c1603cb5a1cc259e899d7794180254e3604db94a3.json  query-97d07e4e6f818cb908903895d858b70f09e9512b3669d0c92c6a2e03d32dc128.json  query-9c92e7cc98ec7cdc9ec36981bef95cd502a22abac3efe9f923977bf36d5c0214.json  query-a69082d7b83ec3c46b70df1dbd67e0853eae2645695213daacb34493caac3c8e.json  query-a9f737d93207da82688461919e1588f53cc1c5d30093d0963b9c03a761889e20.json  query-c7ce8bd934602274ecefc5007499d943fa9b7a210dd2cc98a743412864c827c1.json  query-ddc3b417e21c170c238d1ca30b6dcef6b32560d565d223d113e087f0b474b604.json  query-e38cdba142a5733ed99d6066eb86d6641fb5b9bcdf63d9581a8616941cbe2ad0.json  query-e43a4844bc4a6845640d6a8d13cee41ffb4f1a3d3233ea78cfd36dda5047a366.json  query-e99cffa49e012212c19a600e3427741af95ea3ca907e63677305b8b0613f76fd.json  query-f88b09277d5dcc1d90170c4506bd97931f2e673ba5a2a1fd10a1b6431f19ec1c.json
deploy/: ci.Dockerfile  db.Dockerfile
deploy/e-ks/: Chart.yaml  values.yaml
deploy/test-cluster/: README.md  cert-issuers.yaml  ingress-cert.yaml  oauth-ingress.yaml  oauth2-proxy-values.yaml  traefik-middleware.yaml  traefik-tlsstore.yaml  traefik-values.yaml
development/: Cargo.toml  development.yml  setup.yml
development/src/: lib.rs
docs/: DefinitionofReady  Gebruikerstest-1  Gebruikerstest-1.md  Woordenlijst NL-EN.md  definition-of-done.md  definition-of-ready.md  roadmap.md  woordenlijst_nl-en.md
docs/use-cases/: README.md  Verkiezingen.md  actoren-doelen.md  centraal-stembureau.md  data.md  politieke-groepering-kandidaatstelling.md  politieke-groepering-registratie.md  politieke-groepering.md  uiterste-use-cases.md
frontend/: index.ts
frontend/scripts/: active-link.ts  click-row.ts  date-input.ts  form-variants.ts  initials-input.ts  locality-suggestions.ts  lookup.ts  modal.ts  overlay.ts  poll.js  position-preview.ts  search.ts  select-all-checkbox.ts  sortable.ts  sticky-nav.ts
frontend/styles/: badge.css  button.css  candidate-table.css  cards.css  checkbox.css  core.css  form.css  index.css  layout.css  modal.css  overlay.css  position-preview.css  reset.css  steps.css  sticky-nav.css  table.css  typography.css  util.css  variables.css
locales/: en.yml  nl.yml
migrations/: 20251016172057_persons.sql  20251206123923_canidate_lists.sql
pdf-gen/: Cargo.toml
playwright/: README.md  compose.yml  package-lock.json  package.json  playwright.config.ts
playwright/docker/: playwright.Dockerfile
playwright/tests/: smoke.spec.ts
src/: lib.rs  main.rs
src/candidate_lists/: mod.rs  repository.rs
src/common/: config.rs  constants.rs  context.rs  election.rs  filters.rs  livereload.rs  locale.rs  logging.rs  mod.rs  proxy.rs  router.rs  server.rs  state.rs  templates.rs  test_utils.rs  translate.rs
src/dev/: development.yml  setup.yml  utils.rs
src/error/: app_error.rs  mod.rs  response.rs
src/fixtures/: candidate_list.rs  (+3 more)
templates/: base.html  error.html  index.html  layout.html  not_found.html
validate/: Cargo.toml
(+110 files in other folders)
