[workspace]
members = [
    ".",
    "pdf-gen",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.91"
license = "EUPL-1.2"
repository = "https://github.com/kiesraad/e-KS"
readme = "README.md"
publish = false
description = "Elektronisch kandidaatstellingssysteem"
# TODO
#documentation = "github pages"

[workspace.dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread"], default-features = false }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
askama = { version = "0.14.0", features = ["derive", "alloc"], default-features = false }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs"], default-features = false }
typst = "0.14.1"
tower = "0.5.2"

[package]
name = "e-ks-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description.workspace = true

[dependencies]
dotenvy = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
askama = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
