[package]
name = "eks"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
rust-version = "1.91"
default-run = "eks"
publish = false
readme = "README.md"
description = "Elektronisch kandidaatstellingssysteem"
documentation = "https://kiesraad.github.io/e-KS/e_ks/"
repository = "https://github.com/kiesraad/e-KS"

[features]
default = ["dotenv", "livereload", "dev-features", "anyhow", "http-logging"]
memory-serve = ["dep:memory-serve"]
dotenv = ["dep:dotenvy"]
fixtures = []
livereload = []
dev-features = []
http-logging = ["dep:tower-http"]
anyhow = ["dep:anyhow"]

[[bin]]
name = "fixtures"
required-features = ["fixtures", "anyhow"]
test = false

[[bin]]
name = "development"
required-features = ["anyhow"]
test = false

[[bin]]
name = "setup"
required-features = ["anyhow"]
test = false

[dependencies]
# tokio universe
axum = { version = "0.8.6", features = ["multipart", "macros"] }
axum-extra = { version = "0.12.1", features = ["routing", "typed-routing", "form"] }
tower-http = { version = "0.6.8", features = ["trace"], optional = true }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# blessed.rs / dtolnay
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7"
anyhow = { version = "1.0.86", optional = true }

# blessed.rs
rand = "0.9.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "tls-none"] }
chrono = { version = "0.4.42", features = ["alloc", "std", "serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

# well maintained + many downloads
askama = "0.15.1" # 31M downloads (Dirkjan Ochtman)
dotenvy = { version = "0.15.7", optional = true } # 69M downloads (Allan Zhang)
strum = { version = "0.27.2", features = ["derive"] } # 307M downloads (Peter Glotfelty)
csv = "1.4.0" # 136M downloads (Andrew Gallant)
serde-saphyr = "0.0.13"

# tweedegolf
memory-serve = { version = "2.0.0-beta.0", optional = true }
validate = { path = "validate" }

[build-dependencies]
memory-serve = { version = "2.0.0-beta.0", optional = true }
saphyr = "0.0.6"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"

[lints.rust]
unsafe_code = "forbid"

# https://askama.readthedocs.io/en/stable/performance.html#slow-debug-recompilations
[profile.dev.package.askama_derive]
opt-level = 3
