[package]
name = "pdf-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description.workspace = true

[dependencies]
axum = {workspace = true}
typst =  {workspace = true}